--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-.cool-class {
+
+
+.container {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
+.intro {
+  text-align: center;
   font-weight: bold;
   color: blue;
 }
