--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .cool-class {
   font-weight: bold;
   color: blue;
+  font-size: xx-large;
 }
 
 .container {
@@ -21,8 +22,6 @@ color: #333333;
 margin: 20px auto;
 }
 
-h1{font-size: 300%;}
+h1{font-size: xx-large;}
+h3{font-size: xx-large;}
 
-h3{font-size: 200%;}
-
-p{font-size: 500%;}
