--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-.cool-class {
+h1{
   font-weight: bold;
   color: blue;
   font-size: xx-large;
+
 }
 
 .container {
@@ -22,6 +23,4 @@ color: #333333;
 margin: 20px auto;
 }
 
-h1{font-size: xx-large;}
-h3{font-size: xx-large;}
 
