--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 .cool-class {
   font-weight: bold;
   color: blue;
-  font-size: xx-large;
 }
 
 .container {
@@ -22,4 +21,6 @@ color: #333333;
 margin: 20px auto;
 }
 
-
+h3{
+font-size: xx-large;
+}
