--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ margin: 20px auto;
 }
 
 h1{
-	font-size: 275%
+	font-size: 250%;
 }
 h3{
 	font-size: 200%;
@@ -34,5 +34,5 @@ p{
 }
 
 .ulli{
-	color: red;
+	font-size: 150%;
 }
